[metadata]
name = mtglearn 
version = attr: mtglearn.version.__version__
description = MtG Learn

[options]
package_dir=
    =src
packages=find:
install_requires = 
    ftfy
    datasets
    torch
    transformers
    attrs
    cattrs

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mkdocstrings
    pytkdocs
tests =
    pytest

[options.packages.find]
where=src