[metadata]
name = mtglearn 
version = attr: mtglearn.version.__version__
author = Devin Conathan
author_email = dconathan@gmail.com
description = Magic the Gathering and Machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dconathan/mtglearn
project_urls = 
    Bug Tracker = https://github.com/dconathan/mtglearn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
install_requires = 
    ftfy
    datasets
    attrs
    cattrs

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mkdocstrings
    pytkdocs
tests =
    pytest
models =
    torch
    transformers

[options.packages.find]
where=src